# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.12
#

2006-02-13 20:01:51 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-170

    Summary:
      cms, fix tables in the html editor (epoz)
    Revision:
      itools--main--0.12--patch-170


    new files:
     cms/ui/.arch-ids/epoz_script_table.xml.en.id
     cms/ui/epoz_script_table.xml.en

    modified files:
     Changelog cms/Handler.py


2006-02-13 19:26:32 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-169

    Summary:
      fix manifest file to include "cms/ui/epoz.xml"
    Revision:
      itools--main--0.12--patch-169


    modified files:
     Changelog MANIFEST.in


2006-02-13 11:23:27 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-168

    Summary:
      cms, remove debugging line
    Revision:
      itools--main--0.12--patch-168


    modified files:
     Changelog cms/Metadata.py


2006-02-10 17:49:59 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-167

    Summary:
      merge fixes from the 0.13 branch (open/close resource protocol)
    Revision:
      itools--main--0.12--patch-167

    Patches applied:
    
     * jdavid@itaapy.com--public/itools--main--0.13--patch-19
       merge fixes from the "nozodb" branch (open/close resource protocol)
    
     * jdavid@itaapy.com--public/itools--nozodb--0.13--patch-1
       handlers, fix transactions commit (open and close resources)
    
     * jdavid@itaapy.com--public/itools--nozodb--0.13--patch-3
       catalog, fix loading indexes (follow the open/close resource protocol)
    

    modified files:
     Changelog catalog/IIndex.py handlers/transactions.py

    new patches:
     jdavid@itaapy.com--public/itools--main--0.13--patch-19
     jdavid@itaapy.com--public/itools--nozodb--0.13--patch-1
     jdavid@itaapy.com--public/itools--nozodb--0.13--patch-3


2006-02-08 11:47:04 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-166

    Summary: